--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "dotenv": "^17.2.4",
     "fs-extra": "^11.2.0",
+    "glob": "^13.0.1",
     "puppeteer": "^22.0.0"
   }
 }
