node.js is working

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@
 RUN=12345678-9
 PASSWORD=your_password_here
 
-# Optional: Override BigBlueButton Activity URL
-# BBB_URL=https://auladigital.sence.cl/mod/bigbluebuttonbn/view.php?id=748489
+COURSE_HOME_URL=https://auladigital.sence.cl/course/view.php?id=5967
+BBB_FILTER="Módulo 2"
